Added and tested InceptionResNetV2

--- a/PneumoniaDetect.ipynb
+++ b/PneumoniaDetect.ipynb
@@ -450,21 +450,24 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 104
+          "height": 70
         },
-        "outputId": "ccbc65ba-6a22-4862-b691-e04f9d137c50"
+        "outputId": "261edc27-6cb7-4387-c6c1-0cb3fae639d0"
       },
       "source": [
         "# inceptionv3 = applications.InceptionV3(weights='imagenet', include_top=False, input_shape=(size, size, 3))\n",
         "# resnet = applications.ResNet152V2(weights='imagenet', \n",
         "#                                   include_top=False,\n",
         "#                                   input_shape=(size, size, 3))\n",
-        "effnet = applications.InceptionResNetV2(weights='imagenet', \n",
+        "# effnet = applications.InceptionResNetV2(weights='imagenet', \n",
+        "#                                   include_top=False,\n",
+        "#                                   input_shape=(size, size, 3))\n",
+        "effnet = applications.MobileNetV2(weights='imagenet', \n",
         "                                  include_top=False,\n",
         "                                  input_shape=(size, size, 3))\n",
         "# inceptionv3 = applications.InceptionV3(include_top=False, input_shape=(size, size, 3)) # weights None(random initalization)"
       ],
-      "execution_count": 65,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,14 +476,6 @@
             "  warnings.warn('`input_shape` is undefined or non-square, '\n"
           ],
           "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://github.com/JonathanCMitchell/mobilenet_v2_keras/releases/download/v1.1/mobilenet_v2_weights_tf_dim_ordering_tf_kernels_1.0_224_no_top.h5\n",
-            "9412608/9406464 [==============================] - 1s 0us/step\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
